karnc/tests/fixtures/negative/203_actor_identity_not_sealed/src/demo.karn
context demo

actor Principal { auth = Internal, identity = Int }
